--- a/Template/package.json
+++ b/Template/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A simple Express server for generating templates using Cohere API",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -11,7 +12,7 @@
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^18.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
